<resources>
    <string name="app_name">Potok</string>
    <string name="email">Your email</string>
    <string name="you_password">Your password</string>
    <string name="title_authorization">Enter your data \nto enter the stream</string>
    <string name="to_come_in">sign in</string>
    <string name="check_in"><u>No account yet?</u></string>
    <string name="out">out</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="callerID">Caller ID</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="todo">TODO</string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="important_message">Important message!</string>
    <string name="permission_background">For the application to work, you need to be allowed to work in the background. Please check if such a resolution is installed!</string>
    <string name="permission_notification">For the application to work, you must allow access to notifications. Please check if such a resolution is installed! Without this permission, the application does not work correctly!</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="work_permit"> This application requires this permission!</string>
    <string name="ok">OK</string>
    <string name="enable_permission">Dear user! The application requires permission to read the phones status when it rings. Please enable the resolution in the application settings!</string>
    <string name="potok">POTOK</string>
    <string name="error_valid_account">Your account has expired!</string>
    <string name="info">Info</string>
</resources>
