<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/fragmentLayoutRoot">

    <EditText
        android:id="@+id/etEmailPerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="@dimen/space_xLarge"
        android:layout_marginStart="@dimen/space_xLarge"
<<<<<<< HEAD
        android:layout_marginLeft="@dimen/space_xLarge"
        android:layout_marginRight="@dimen/space_xLarge"
=======
>>>>>>> master
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/space_small"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorGrey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_xLarge"
        android:layout_marginStart="@dimen/space_xLarge"
<<<<<<< HEAD
        android:layout_marginLeft="@dimen/space_xLarge"
        android:layout_marginRight="@dimen/space_xLarge"
=======
>>>>>>> master
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/you_password"
        android:inputType="textPassword"
        android:padding="@dimen/space_small"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorGrey"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailPerson" />

    <Button
        android:id="@+id/btnToComeIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/to_come_in"
        android:textColor="@color/text_color_button"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/space_small"
        android:layout_marginTop="@dimen/space_small"
        android:indeterminateTint="@color/colorButton"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/etEmailPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/size_xLarge"
        android:layout_height="@dimen/size_xLarge"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/title_authorization"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmailPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/check_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_color_button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToComeIn" />

</android.support.constraint.ConstraintLayout>
